--- a/stylesheets/app.css
+++ b/stylesheets/app.css
@@ -1878,7 +1878,8 @@ html, body { min-width: 0 !important; }
 .jrw-resp .share-social article ul li:nth-child(2) a { background: url("../images/logo-social.png") no-repeat -26px -1px; }
 .jrw-resp .share-social article ul li:nth-child(3) a { background: url("../images/logo-social.png") no-repeat -52px -1px; }
 .jrw-resp .share-social article ul li:nth-child(4) a { background: url("../images/logo-social.png") no-repeat -78px -1px; }
-.jrw-resp .product { font-family: Georgia, "Times New Roman", Times, serif; font-size: 0.875rem; font-style: italic; padding-left: 0.9375rem; padding-right: 0.9375rem; width: 100%; float: left; }
+.jrw-resp .product { border-bottom: 1px solid #d9d8d8; font-family: Georgia, "Times New Roman", Times, serif; font-size: 0.875rem; font-style: italic; padding-left: 0.9375rem; padding-right: 0.9375rem; width: 100%; float: left; }
+.jrw-resp .product:last-child { border-bottom: none; }
 .jrw-resp .product header { width: 100%; margin-left: auto; margin-right: auto; margin-top: 0; margin-bottom: 0; max-width: 62.5rem; margin-bottom: 0; }
 .jrw-resp .product header:before, .jrw-resp .product header:after { content: " "; display: table; }
 .jrw-resp .product header:after { clear: both; }
@@ -1892,8 +1893,10 @@ html, body { min-width: 0 !important; }
 .jrw-resp .product section.product-discription div { padding-left: 0.9375rem; padding-right: 0.9375rem; width: 41.66667%; float: left; }
 .jrw-resp .product section.product-discription div + div { padding-left: 0.9375rem; padding-right: 0.9375rem; width: 58.33333%; float: left; }
 .jrw-resp .product section.product-discription ul { list-style: none; }
+.jrw-resp .product section.product-quantity { padding: 0; }
 .jrw-resp .product section.product-quantity div { padding-left: 0.9375rem; padding-right: 0.9375rem; width: 16.66667%; float: left; }
 .jrw-resp .product section.product-quantity div + div { padding-left: 0.9375rem; padding-right: 0.9375rem; width: 83.33333%; float: left; }
+.jrw-resp .product section.product-footer { padding: 0; }
 .jrw-resp .product section.product-footer p { padding-left: 0.9375rem; padding-right: 0.9375rem; width: 100%; float: left; }
 .jrw-resp .product section.product-footer p span { display: inline-block; float: right; }
 .jrw-resp .product .price-each { font-size: 1.125rem; margin-bottom: 0; }
